--- a/gb/21/10/14/n13302323.md
+++ b/gb/21/10/14/n13302323.md
@@ -1,64 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjmocf3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>MLB道奇火力发威 逼巨人打第5战</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13302325-521766-600x400.jpg" />
 <h6>史密斯。（Ronald Martinez/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2021年10月14日讯】（大纪元记者魏文彬综合报导）前场被完封只能背水一战的洛杉矶<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%81%93%E5%A5%87.md#1">道奇</a>，13日在国联分区系列赛第四战，打线终于有所发挥，全场击出13支安打，其中开路先锋贝兹（Mookie Betts）与国联最会敲全垒打的捕手史密斯（Will Smith）合计挥出2轰，贡献5分打点，终场道奇以7：2力克旧金山<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%B7%A8%E4%BA%BA.md#1">巨人</a>，保住大联盟团队薪资最高的豪门一点面子。</p>
+<p>【大纪元2021年10月14日讯】（大纪元记者魏文彬综合报导）前场被完封只能背水一战的洛杉矶<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%81%93%E5%A5%87.md#1">道奇</a>，13日在国联分区系列赛第四战，打线终于有所发挥，全场击出13支安打，其中开路先锋贝兹（Mookie Betts）与国联最会敲全垒打的捕手史密斯（Will Smith）合计挥出2轰，贡献5分打点，终场道奇以7：2力克旧金山<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%A8%E4%BA%BA.md#1">巨人</a>，保住大联盟团队薪资最高的豪门一点面子。</p>
 <figure id="13302326" aria-describedby="caption-13302326" style="width: 299px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13302326-521767-450x675.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/10/id13302326-521767-450x675.jpg" alt="贝兹。" width="299" b="449" /></a><figcaption id="caption-13302326" class="wp-caption-text">贝兹。（Ronald Martinez/Getty Images）</figcaption></figure>
-<p>前一场击出全垒打却被外野强劲风势没收，透纳（Trea Turner）此役改打安打，一局下敲出二垒安打先驰得点，也开启<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%81%93%E5%A5%87.md#1">道奇</a>得分攻势。二局下靠着泰勒（Chris Taylor）高飞牺牲打，道奇再添1分。四局下换贝兹扛出两分弹，道奇扩大领先成4：0。</p>
-<p>拉夫（Darin Ruf）五局上以牺牲打为<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%B7%A8%E4%BA%BA.md#1">巨人</a>打破鸭蛋，但道奇下半局也还以颜色，贝兹左外野高飞牺牲打添得1分。道奇六局上派火球男葛拉特罗（Brusdar Graterol）登板，他主投1局被打1安打无失分，还飙出102.5英哩（约165公里）伸卡球，令人惊艳。</p>
+<p>前一场击出全垒打却被外野强劲风势没收，透纳（Trea Turner）此役改打安打，一局下敲出二垒安打先驰得点，也开启<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%81%93%E5%A5%87.md#1">道奇</a>得分攻势。二局下靠着泰勒（Chris Taylor）高飞牺牲打，道奇再添1分。四局下换贝兹扛出两分弹，道奇扩大领先成4：0。</p>
+<p>拉夫（Darin Ruf）五局上以牺牲打为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%A8%E4%BA%BA.md#1">巨人</a>打破鸭蛋，但道奇下半局也还以颜色，贝兹左外野高飞牺牲打添得1分。道奇六局上派火球男葛拉特罗（Brusdar Graterol）登板，他主投1局被打1安打无失分，还飙出102.5英哩（约165公里）伸卡球，令人惊艳。</p>
 <p>八局上，巨人追成2：5；不过八局下，史密斯锁定大胡子投手利特尔（Zack Littell）投出的第一球，击成飞越中外野大墙的两分炮，九局上巨人未再有分数进账，道奇就以7：2获胜。</p>
-<p>接下来两队将在巨人主场进行骤死第五战，预料巨人将派出第一战狂飙10次三振无失分、<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%AD%A3%E5%90%8E%E8%B5%9B.md#1">季后赛</a>初登板拿下胜投的韦伯（Logan Webb）；道奇则会以墨西哥天才左投乌里耶斯（Julio Urias）应战。◇</p>
+<p>接下来两队将在巨人主场进行骤死第五战，预料巨人将派出第一战狂飙10次三振无失分、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A3%E5%90%8E%E8%B5%9B.md#1">季后赛</a>初登板拿下胜投的韦伯（Logan Webb）；道奇则会以墨西哥天才左投乌里耶斯（Julio Urias）应战。◇</p>
 <p>责任编辑：高小虔</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/9/n13291445.md#1">MLB菜鸟投手发威 光芒季后赛完封红袜</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/9/n13291448.md#1">MLB麦卡勒6.2局无失分 太空人季后赛开红盘</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/11/n13297017.md#1">MLB破队史纪录16安 白袜季后赛主场退太空人</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/11/n13297022.md#1">MLB敲延长赛再见轰 瓦兹奎兹助红袜季后赛听牌</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/12/n13298796.md#1">MLB隆戈利亚炮轰薛泽 巨人季后赛听牌</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/12/n13298801.md#1">MLB红袜季后赛掩光芒 晋级美联冠军战</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/12/n13298804.md#1">MLB佩德森代打三分弹 勇士国联季后赛听牌</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384380.md#1">蓝鸟芮伊、酿酒人柏尼斯 夺MLB赛扬奖</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384385.md#1">NBA字母哥豪取47分 率雄鹿撞飞湖人</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/17/n13381889.md#1">NBA库里9颗三分球 率勇士撕破篮网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13291445.md#1">MLB菜鸟投手发威 光芒季后赛完封红袜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13291448.md#1">MLB麦卡勒6.2局无失分 太空人季后赛开红盘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297017.md#1">MLB破队史纪录16安 白袜季后赛主场退太空人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297022.md#1">MLB敲延长赛再见轰 瓦兹奎兹助红袜季后赛听牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13298796.md#1">MLB隆戈利亚炮轰薛泽 巨人季后赛听牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13298801.md#1">MLB红袜季后赛掩光芒 晋级美联冠军战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13298804.md#1">MLB佩德森代打三分弹 勇士国联季后赛听牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678994.md#1">WTT球星挑战赛 林昀儒男双、混双晋级8强</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670518.md#1">WTT杜哈站 林昀儒、郑怡静夺混双冠军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670524.md#1">日职25日开打 王柏融吴念庭入选开季名单</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/24/n10929549.md#1" target="_blank">传奇总统里根（4）：福利改革 全美效仿</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/8/n13362266.md#1">【思想领袖】无声之手如何影响言论自由</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387996.md#1">【十字路口】白宫小威呛北京 彭帅紧急求救？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387269.md#1">新世纪影视新片《寻狗》热映 内涵深入人心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同扶养小孩</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13383432.md#1">一表看懂男性雄激素 衰老主要原因和它有关</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674994.md#1">【财商天下】普京出险招 欧盟如何应对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675351.md#1">【横河观点】乌克兰抗俄给台湾的借鉴与启示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675602.md#1">砸60万装修餐厅 《营业中》开播吸引粉丝前来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/14/n13302323.htm">MLB道奇火力发威 逼巨人打第5战</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/14/n13302323.htm">MLB道奇火力发威 逼巨人打第5战</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjmocf3555/djy/blob/master/gb/21/10/14/n13302323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/14/n13302323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
